--- a/templates/index.html
+++ b/templates/index.html
@@ -112,14 +112,14 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="{{ url_for('static', filename='assets/image/'~dishes.image) }}" alt="{{ dish.name }}">
+           <img src="/static/assets/dishes/{{ dish.image }}" alt="{{ dish.name }}">
             <h3>{{ dish.name }}</h3>
             <div class="stars">
                 {% for i in range(5) %}
                     <i class="fas fa-star"></i>
                 {% endfor %}
             </div>
-            <span>${{ dish.price }}</span>
+            <span>£{{ dish.price }}</span>
             <button class="btn btn-primary add-to-cart" data-id="{{ dish._id }}">Add to Cart</button>
         </div>
 
@@ -569,7 +569,6 @@
 <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
 <script src="{{ url_for('static', filename='js/cart.js') }}"></script>
 <script src="{{ url_for('static', filename='js/order.js') }}"></script>
-<script src="{{ url_for('static', filename='js/animations.js') }}"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
