Fetching data to cart

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -144,7 +144,7 @@
             </div>
         </div>
         {% else %}
-        <p>Your cart is empty. <a href="{{ url_for('dish') }}">Go back to dishes</a></p>
+        <p>Your cart is empty. <a href="{{ url_for('get_dishes') }}">Go back to dishes</a></p>
         {% endif %}
     </section>
 </body>
