--- a/templates/cart.html
+++ b/templates/cart.html
@@ -52,9 +52,10 @@
 
     <div class="total-section">
       <h4>Total: $<span>{{ total }}</span></h4>
-      <form action="{{ url_for('checkout') }}" method="POST">
-        <button type="submit" class="btn btn-checkout mt-3">Checkout</button>
+      <form method="POST" action="{{ url_for('checkout') }}">
+        <button class="btn btn-checkout mt-3">Checkout</button>
       </form>
+
     </div>
 
   {% else %}
