--- a/templates/dish.html
+++ b/templates/dish.html
@@ -22,7 +22,7 @@
         <a href="/">home</a>
         <a class="active" href="/dishes">dishes</a>
         <a href="#">about</a>
-        <a href="menu.html">menu</a>
+        <a href="/menu">menu</a>
         <a href="review.html">review</a>
         <a href="order.html">order</a>
     </nav>
