--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,7 @@ section:nth-child(even){
 }
 
 header{
-    /* position: fixed;
+     position: fixed;
     top:0; left: 0; right:0;
     background: #fff;
     padding:1rem 7%;
@@ -73,19 +73,7 @@ header{
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
-    box-shadow: var(--box-shadow); */
-
-     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1rem 2rem;
-    background: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.1);
-    z-index: 1000;
+    box-shadow: var(--box-shadow);
 }
 
 header .logo{
