--- a/static/css/style.css
+++ b/static/css/style.css
@@ -540,6 +540,16 @@ header .icons #menu-bars{
     color:var(--light-color);
 }
 
+.order form{
+    max-width:90rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    border:.1rem solid rgba(0,0,0,.2);
+    background:#fff;
+    padding:1.5rem;
+    margin:0 auto;
+}
+
 .order form .inputBox{
     display: flex;
     flex-wrap: wrap;
