--- a/templates/review.html
+++ b/templates/review.html
@@ -168,6 +168,7 @@
             <a href="#">+358449314564</a>
             <a href="#">olisagarsandesh@gmail.com</a>
             <a href="#">mahendragautamsharma@gmail.com</a>
+             <a href="#">dhungananischal371@gmail.com</a>
             <a href="#">Kirstintie 30 C, Espoo , 02760/a>
         </div>
 
@@ -187,6 +188,54 @@
 
 <!--footer section end-->
 
-</body>
+<!-- Load real reviews dynamically -->
+<script>
+fetch("/api/reviews")
+  .then(response => response.json())
+  .then(reviews => {
+    let html = "";
+    reviews.forEach(r => {
+      html += `
+        <div class="swiper-slide slide">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+                <img src="../assets/image/pic-1.png" alt="">
+                <div class="user-info">
+                    <h3>${r.name}</h3>
+                    <div class="stars">
+                        ${'<i class="fas fa-star"></i>'.repeat(r.rating)}
+                    </div>
+                </div>
+            </div>
+            <p>${r.message}</p>
+        </div>
+      `;
+    });
 
+
+    document.getElementById("reviews-wrapper").innerHTML = html;
+
+     
+    swiper.update();  
+    swiper.updateAutoHeight();
+  });
+</script>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<script>
+var swiper = new Swiper(".review-slider", {
+    loop: false,
+    autoHeight: true,
+    grabCursor: true,
+    spaceBetween: 20,
+    centeredSlides: true,
+    autoplay: {
+        delay: 3000,
+        disableOnInteraction: false,
+    },
+});
+</script>
+
+</body>
 </html>
