--- a/templates/order.html
+++ b/templates/order.html
@@ -132,6 +132,7 @@
             <a href="#">+358449314564</a>
             <a href="#">olisagarsandesh@gmail.com</a>
             <a href="#">mahendragautamsharma@gmail.com</a>
+            <a href="#">dhungananischal371@gmail.com</a>
             <a href="#">Kirstintie 30 C, Espoo , 02760/a>
         </div>
 
