--- a/templates/order.html
+++ b/templates/order.html
@@ -37,8 +37,8 @@
 
 <section class="order" id="order">
 
-    <h3 class="sub-heading"> order now </h3>
-    <h1 class="heading"> free and fast </h1>
+    <h3 class="sub-heading">{{ t['order now'] }} </h3>
+    <h1 class="heading"> {{ t['free and fast'] }}  </h1>
 
     <form action="">
 
